--- a/Search.html
+++ b/Search.html
@@ -27,6 +27,33 @@
       .inputpower::-ms-input-placeholder {
         color: #afafaf;
       }
+      .rotationnn {
+        transform: rotate(20deg) translateX(23px);
+      }
+      .colore1 {
+        background-color: #de3600;
+      }
+      .colore2 {
+        background-color: #1e3264;
+      }
+      .colore3 {
+        background-color: #e8125c;
+      }
+      .colore4 {
+        background-color: #158a08;
+      }
+      .colore5 {
+        background-color: #bc5800;
+      }
+      .colore6 {
+        background-color: #d84000;
+      }
+      .colore7 {
+        background-color: #e1118b;
+      }
+      .colore8 {
+        background-color: #8c67ac;
+      }
     </style>
   </head>
   <body>
@@ -263,10 +290,169 @@
           </div>
 
           <div class="row my-5 justify-content-center" id="cardsearch"></div>
-          <h4 class="text-center text-white">Sfoglia tutto</h4>
+          <h4 class="text-center text-white mb-5">Sfoglia tutto</h4>
           <div class="container">
-            <div class="row">
-              <div class="col"></div>
+            <div class="row g-5 d-flex">
+              <div
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+              >
+                <div
+                  class="colore1 position-relative overflow-hidden rounded-3"
+                  style="height: 130px; width: 200px"
+                >
+                  <h3 class="text-white p-3">Podcast</h3>
+                  <div
+                    class="rotationnn position-absolute bottom-0 end-0"
+                    style="width: 70px; height: 70px"
+                  >
+                    <img
+                      class="rounded-3 w-100 h-100"
+                      src="./assets/imgs/search/image-2.jpg"
+                      style="object-fit: cover"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+              >
+                <div
+                  class="colore2 position-relative overflow-hidden rounded-3"
+                  style="height: 130px; width: 200px"
+                >
+                  <h3 class="text-white p-3">Create per te</h3>
+                  <div
+                    class="rotationnn position-absolute bottom-0 end-0"
+                    style="width: 70px; height: 70px"
+                  >
+                    <img
+                      class="rounded-3 w-100 h-100"
+                      src="./assets/imgs/search/image-42.png"
+                      style="object-fit: cover"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+              >
+                <div
+                  class="colore3 position-relative overflow-hidden rounded-3"
+                  style="height: 130px; width: 200px"
+                >
+                  <h3 class="text-white p-3">Nuove uscite</h3>
+                  <div
+                    class="rotationnn position-absolute bottom-0 end-0"
+                    style="width: 70px; height: 70px"
+                  >
+                    <img
+                      class="rounded-3 w-100 h-100"
+                      src="./assets/imgs/search/image-26.jpg"
+                      style="object-fit: cover"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+              >
+                <div
+                  class="colore4 position-relative overflow-hidden rounded-3"
+                  style="height: 130px; width: 200px"
+                >
+                  <h3 class="text-white p-3">Pop</h3>
+                  <div
+                    class="rotationnn position-absolute bottom-0 end-0"
+                    style="width: 70px; height: 70px"
+                  >
+                    <img
+                      class="rounded-3 w-100 h-100"
+                      src="./assets/imgs/search/image-47.jpg"
+                      style="object-fit: cover"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+              >
+                <div
+                  class="colore5 position-relative overflow-hidden rounded-3"
+                  style="height: 130px; width: 200px"
+                >
+                  <h3 class="text-white p-3">Hip Hop</h3>
+                  <div
+                    class="rotationnn position-absolute bottom-0 end-0"
+                    style="width: 70px; height: 70px"
+                  >
+                    <img
+                      class="rounded-3 w-100 h-100"
+                      src="./assets/imgs/search/image-49.jpg"
+                      style="object-fit: cover"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+              >
+                <div
+                  class="colore6 position-relative overflow-hidden rounded-3"
+                  style="height: 130px; width: 200px"
+                >
+                  <h3 class="text-white p-3">Dance / <br />Elettronica</h3>
+                  <div
+                    class="rotationnn position-absolute bottom-0 end-0"
+                    style="width: 70px; height: 70px"
+                  >
+                    <img
+                      class="rounded-3 w-100 h-100"
+                      src="./assets/imgs/search/image-52.jpg"
+                      style="object-fit: cover"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+              >
+                <div
+                  class="colore7 position-relative overflow-hidden rounded-3"
+                  style="height: 130px; width: 200px"
+                >
+                  <h3 class="text-white p-3">Latina</h3>
+                  <div
+                    class="rotationnn position-absolute bottom-0 end-0"
+                    style="width: 70px; height: 70px"
+                  >
+                    <img
+                      class="rounded-3 w-100 h-100"
+                      src="./assets/imgs/search/image-5.jpg"
+                      style="object-fit: cover"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+              >
+                <div
+                  class="colore8 position-relative overflow-hidden rounded-3"
+                  style="height: 130px; width: 200px"
+                >
+                  <h3 class="text-white p-3">Classifiche</h3>
+                  <div
+                    class="rotationnn position-absolute bottom-0 end-0"
+                    style="width: 70px; height: 70px"
+                  >
+                    <img
+                      class="rounded-3 w-100 h-100"
+                      src="./assets/imgs/search/image-14.jpg"
+                      style="object-fit: cover"
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </article>
