--- a/home.html
+++ b/home.html
@@ -74,29 +74,26 @@
         height: 40px;
         object-fit: cover;
       }
-      /* .playlist-card {
-        border-radius: 10px;
-        overflow: hidden;
-        position: relative;
-      }
-      .playlist-card img {
-        width: 100%;
-        height: auto;
-      }
-      .playlist-card .card-body {
-        padding: 15px;
-        background-color: rgba(0, 0, 0, 0.7);
-        color: white;
-      }
-      .playlist-card .card-body h5 {
-        font-size: 1.2rem;
-        margin-bottom: 10px;
-      }
-      .playlist-card .card-body p {
-        font-size: 0.9rem;
-      } */
+
       #playlist-card {
         width: 300px !important;
+      }
+
+      ul li {
+        transition: background-color 0.3s ease, color 0.3s ease;
+      }
+
+      ul li:hover {
+        background-color: rgb(68, 68, 68);
+        cursor: pointer;
+      }
+      nav p {
+        transition: background-color 0.3s ease, color 0.3s ease;
+      }
+
+      nav p:hover {
+        background-color: rgb(68, 68, 68);
+        cursor: pointer;
       }
     </style>
   </head>
@@ -104,14 +101,15 @@
   <body>
     <div class="container-fluid">
       <div class="row">
+        <!-- BARRA SINISTRA -->
         <nav
           class="col-md-3 col-lg-3 d-none d-md-block bg-black text-white min-vh-100 p-3"
         >
           <div
-            class="sticky-top flex-grow-1 overflow-auto z-2 position-relative"
+            class="sticky-top flex-grow-1 overflow-auto z-2 position-relative list-group"
           >
             <ul class="nav flex-column">
-              <li class="nav-item">
+              <li class="nav-item rounded-bottom-3 rounded-top-3">
                 <a href="#" class="nav-link text-white">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -127,14 +125,14 @@
                   </svg>
                 </a>
               </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link text-white">
+              <li class="nav-item rounded-bottom-3 rounded-top-3">
+                <a href="./home.html" class="nav-link text-white">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
                     height="16"
                     fill="currentColor"
-                    class="bi bi-house-door-fill"
+                    class="bi bi-house-door-fill me-2"
                     viewBox="0 0 16 16"
                   >
                     <path
@@ -144,14 +142,14 @@
                   Home</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item rounded-bottom-3 rounded-top-3">
                 <a href="#" class="nav-link text-white">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
                     height="16"
                     fill="currentColor"
-                    class="bi bi-search"
+                    class="bi bi-search me-2"
                     viewBox="0 0 16 16"
                   >
                     <path
@@ -161,14 +159,14 @@
                   Cerca</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item rounded-bottom-3 rounded-top-3">
                 <a href="#" class="nav-link text-white">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
                     height="16"
                     fill="currentColor"
-                    class="bi bi-music-note-list"
+                    class="bi bi-music-note-list me-2"
                     viewBox="0 0 16 16"
                   >
                     <path
@@ -186,14 +184,14 @@
                   La tua libreria</a
                 >
               </li>
-              <li class="nav-item mt-3">
+              <li class="nav-item mt-3 rounded-bottom-3 rounded-top-3">
                 <a href="#" class="nav-link text-white">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
                     height="16"
                     fill="currentColor"
-                    class="bi bi-plus-square-fill"
+                    class="bi bi-plus-square-fill me-2"
                     viewBox="0 0 16 16"
                   >
                     <path
@@ -203,53 +201,36 @@
                   Crea playlist</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="nav-item rounded-bottom-3 rounded-top-3">
                 <a href="#" class="nav-link text-white">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    fill="currentColor"
-                    class="bi bi-heart-pulse-fill"
-                    viewBox="0 0 16 16"
-                  >
-                    <path
-                      d="M1.475 9C2.702 10.84 4.779 12.871 8 15c3.221-2.129 5.298-4.16 6.525-6H12a.5.5 0 0 1-.464-.314l-1.457-3.642-1.598 5.593a.5.5 0 0 1-.945.049L5.889 6.568l-1.473 2.21A.5.5 0 0 1 4 9z"
-                    />
-                    <path
-                      d="M.88 8C-2.427 1.68 4.41-2 7.823 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C11.59-2 18.426 1.68 15.12 8h-2.783l-1.874-4.686a.5.5 0 0 0-.945.049L7.921 8.956 6.464 5.314a.5.5 0 0 0-.88-.091L3.732 8z"
-                    />
-                  </svg>
+                  <img
+                    src="https://alfasareekkan.github.io/spotify/assets/img/liked-songs-300.png"
+                    alt="Icona"
+                    style="width: 18px; height: 18px"
+                    class="me-2"
+                  />
+
                   Brani che ti piacciono
                 </a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item rounded-bottom-3 rounded-top-3">
                 <a
                   href="#"
-                  class="nav-link text-white border-bottom border-white"
+                  class="nav-link text-white border-bottom border-secondary"
                 >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    fill="currentColor"
-                    class="bi bi-bookmarks"
-                    viewBox="0 0 16 16"
-                  >
-                    <path
-                      d="M2 4a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v11.5a.5.5 0 0 1-.777.416L7 13.101l-4.223 2.815A.5.5 0 0 1 2 15.5zm2-1a1 1 0 0 0-1 1v10.566l3.723-2.482a.5.5 0 0 1 .554 0L11 14.566V4a1 1 0 0 0-1-1z"
-                    />
-                    <path
-                      d="M4.268 1H12a1 1 0 0 1 1 1v11.768l.223.148A.5.5 0 0 0 14 13.5V2a2 2 0 0 0-2-2H6a2 2 0 0 0-1.732 1"
-                    />
-                  </svg>
+                  <img
+                    src="https://alan-tomaz.github.io/Spotify-Clone/img/your-episodes.png"
+                    alt="Icona"
+                    style="width: 18px; height: 18px"
+                    class="me-2"
+                  />
                   I tuoi episodi</a
                 >
               </li>
             </ul>
           </div>
           <div
-            class="z-1 position-sticky overflow-auto custom-scroll"
+            class="z-1 position-sticky overflow-auto custom-scroll border-bottom border-secondary"
             style="height: 500px"
           >
             <div
@@ -257,31 +238,95 @@
               data-bs-target="#navbar-example2"
               data-bs-root-margin="0px 0px -40%"
               data-bs-smooth-scroll="true"
-              class="scrollspy-example bg-black p-3 rounded-2"
+              class="scrollspy-example bg-black m-1 text-white-50 small fs-6 m-1"
               tabindex="0"
-              id="scrollspy"
+              style="font-size: 6px"
             >
-              <p>early stage emily syndrome</p>
-              <p>Be The Young</p>
-              <p>saggio vibes</p>
-              <p>main character energy</p>
-              <p>that fucking mood</p>
-              <p>VEE CARLOTTA E GIACOMO</p>
-              <p>An emily Winchester kind of mood</p>
-              <p>landning page</p>
-              <p>2021 lol</p>
-              <p>cosa cazzo vuol dire</p>
-              <p>honey and glass</p>
-              <p>(revenge) training arc</p>
-              <p>minecratf & nintendo switch</p>
-              <p>silvano d'orba? I hardly know her</p>
-              <p>Culo 2022</p>
-              <p>Frah Quintale mix</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                early stage emily syndrome
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">Be The Young</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">saggio vibes</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                main character energy
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                that fucking mood
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                VEE CARLOTTA E GIACOMO
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                An emily Winchester kind of mood
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">landning page</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">2021 lol</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                cosa cazzo vuol dire
+              </p>
+              <p class="m-1 1875rem">honey and glass</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                (revenge) training arc
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                minecratf & nintendo switch
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                silvano d'orba? I hardly know her
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">Culo 2022</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                Frah Quintale mix
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                Francesco Guccini MIX
+              </p>
+
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                early stage emily syndrome
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">Be The Young</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">saggio vibes</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                main character energy
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                that fucking mood
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                VEE CARLOTTA E GIACOMO
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                An emily Winchester kind of mood
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">landning page</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">2021 lol</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                cosa cazzo vuol dire
+              </p>
+              <p class="m-1 1875rem">honey and glass</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                (revenge) training arc
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                minecratf & nintendo switch
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                silvano d'orba? I hardly know her
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">Culo 2022</p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                Frah Quintale mix
+              </p>
+              <p class="m-1 rounded-bottom-3 rounded-top-3">
+                Francesco Guccini MIX
+              </p>
             </div>
           </div>
         </nav>
+        <!-- BARRA CENTRALE -->
         <article
-          class="col-md-7 col-lg-7 min-vh-100 bg-dark p-4 d-flex flex-column"
+          class="col-md-9 col-lg-7 min-vh-100 bg-dark p-4 d-flex flex-column"
         >
           <div class="row align-items-center gx-0">
             <div class="col-12 col-md-6 mb-2 mb-md-0">
@@ -437,9 +482,8 @@
             </div>
           </div>
         </article>
-        <div
-          class="col-md-2 col-lg-2 d-none d-sm-block bg-black text-white min-vh-100"
-        >
+        <!-- BARRA DESTRA -->
+        <div class="col-lg-2 d-none d-sm-block bg-black text-white min-vh-100">
           <div class="d-flex justify-content-between align-items-center mb-3">
             <h6 class="mb-0">Attività Amici</h6>
             <div>
