boxshadow on card

--- a/Search.html
+++ b/Search.html
@@ -54,6 +54,9 @@
       .colore8 {
         background-color: #8c67ac;
       }
+      .boxshadowcard {
+        box-shadow: 1px 3px 1px 1px #00000073;
+      }
     </style>
   </head>
   <body>
@@ -306,7 +309,7 @@
                     style="width: 70px; height: 70px"
                   >
                     <img
-                      class="rounded-3 w-100 h-100"
+                      class="rounded-3 w-100 h-100 boxshadowcard"
                       src="./assets/imgs/search/image-2.jpg"
                       style="object-fit: cover"
                     />
@@ -326,7 +329,7 @@
                     style="width: 70px; height: 70px"
                   >
                     <img
-                      class="rounded-3 w-100 h-100"
+                      class="rounded-3 w-100 h-100 boxshadowcard"
                       src="./assets/imgs/search/image-42.png"
                       style="object-fit: cover"
                     />
@@ -346,7 +349,7 @@
                     style="width: 70px; height: 70px"
                   >
                     <img
-                      class="rounded-3 w-100 h-100"
+                      class="rounded-3 w-100 h-100 boxshadowcard"
                       src="./assets/imgs/search/image-26.jpg"
                       style="object-fit: cover"
                     />
@@ -366,7 +369,7 @@
                     style="width: 70px; height: 70px"
                   >
                     <img
-                      class="rounded-3 w-100 h-100"
+                      class="rounded-3 w-100 h-100 boxshadowcard"
                       src="./assets/imgs/search/image-47.jpg"
                       style="object-fit: cover"
                     />
@@ -386,7 +389,7 @@
                     style="width: 70px; height: 70px"
                   >
                     <img
-                      class="rounded-3 w-100 h-100"
+                      class="rounded-3 w-100 h-100 boxshadowcard"
                       src="./assets/imgs/search/image-49.jpg"
                       style="object-fit: cover"
                     />
@@ -406,7 +409,7 @@
                     style="width: 70px; height: 70px"
                   >
                     <img
-                      class="rounded-3 w-100 h-100"
+                      class="rounded-3 w-100 h-100 boxshadowcard"
                       src="./assets/imgs/search/image-52.jpg"
                       style="object-fit: cover"
                     />
@@ -426,7 +429,7 @@
                     style="width: 70px; height: 70px"
                   >
                     <img
-                      class="rounded-3 w-100 h-100"
+                      class="rounded-3 w-100 h-100 boxshadowcard"
                       src="./assets/imgs/search/image-5.jpg"
                       style="object-fit: cover"
                     />
@@ -446,7 +449,7 @@
                     style="width: 70px; height: 70px"
                   >
                     <img
-                      class="rounded-3 w-100 h-100"
+                      class="rounded-3 w-100 h-100 boxshadowcard"
                       src="./assets/imgs/search/image-14.jpg"
                       style="object-fit: cover"
                     />
