--- a/home.html
+++ b/home.html
@@ -337,7 +337,7 @@
 
           <!-- CARD CENTRALE -->
           <div
-            class="container-fluid p-5 position-relative"
+            class="container-fluid p-5 position-relative rounded-2 my-5"
             style="background: linear-gradient(to top, black, #2c2c2c)"
           >
             <div class="d-flex align-items-center">
@@ -359,6 +359,18 @@
               </div>
             </div>
           </div>
+
+          <!-- ALBUM CHE POTREBBERO PIACERTI : PARTE FATTA IN JS -->
+
+          <div class="container">
+            <div class="row">
+              <h4 class="text-white my-4 col-12">
+                Album che potrebbero piacerti
+              </h4>
+              <div class="d-flex flex-wrap" id="album-home"></div>
+            </div>
+          </div>
+
           <!-- CARD PLAYLIST -->
 
           <div class="container mt-5">
@@ -413,26 +425,6 @@
               <div class="card-playlist card text-white">
                 <img src="./assets/imgs/main/image-12.jpg" alt="" />
                 <p>Brani che ti piacciono</p>
-              </div>
-            </div>
-          </div>
-          <h4 class="text-white my-4 col-12">Album che potrebbero piacerti</h4>
-          <div class="container">
-            <div class="row">
-              <div class="d-flex flex-wrap" id="album-home">
-                <div id="album-card" class="card border-0 p-3">
-                  <img
-                    src="https://cdn-images.dzcdn.net/images/cover/cf155cd476feac69dd36ee65422ab7e7/250x250-000000-80-0-0.jpg"
-                    class="card-img"
-                    alt="album-cover"
-                  />
-                  <div class="card-body py-3 px-0">
-                    <h5 class="card-title text-white">Hello World</h5>
-                    <a href="#" class="text-secondary text-decoration-none fs-6"
-                      >Pinguini Tattici Nucleari</a
-                    >
-                  </div>
-                </div>
               </div>
             </div>
           </div>
